2026-02-05T02:33:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21696529461 # 868
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-05
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 259 293 / 262 296
* notice: next accum: outdated-unq outdated-all / unq all: 262 296 / 262 296
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-16 2026-01-17 2026-01-18 2026-01-19 2026-01-20] / []

2026-02-03T02:37:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21614633151 # 866
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-03
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 259 293 / 261 295
* notice: next accum: outdated-unq outdated-all / unq all: 259 293 / 262 296
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-02T02:41:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21575476117 # 865
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-02
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 258 292 / 261 295
* notice: next accum: outdated-unq outdated-all / unq all: 259 293 / 261 295
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-15 2026-01-16 2026-01-17] / []

2026-02-01T02:51:36Z: